Create home page and call data

--- a/src/global.css
+++ b/src/global.css
@@ -2,3 +2,11 @@
     font-family: 'Monserrat';
     src: url('./assets/font/Montserrat-VariableFont_wght.ttf');
 }
+body {
+    max-width: 1400px; 
+    margin: auto;
+}
+
+* {
+    font-family: "Monserrat", sans-serif;
+}
