--- a/src/components/pages/Home/Footer/style.module.css
+++ b/src/components/pages/Home/Footer/style.module.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin-top: 30px;
 }
 .logo {
     width: 122px;
