--- a/src/components/pages/Home/Header/style.module.css
+++ b/src/components/pages/Home/Header/style.module.css
@@ -18,3 +18,13 @@
     font-weight: 500;
 }
 
+.link:hover {
+    color: #FF6060;
+    text-decoration: underline;
+}
+
+.link:active {
+    color: #FF6060;
+    text-decoration: underline;
+}
+
