--- a/src/components/SlideShow/style.module.css
+++ b/src/components/SlideShow/style.module.css
@@ -51,3 +51,17 @@
 .active {
   opacity: 1;
 }
+
+@media screen and (max-width: 768px) {
+  .slideShow {
+    height: 255px;
+  }
+  .buttonLeft {
+    left: 5px;
+    font-size: 30px;
+  }
+  .buttonRight {
+    right: 5px;
+    font-size: 30px;
+  }
+}
