--- a/src/components/pages/Error404/style.module.css
+++ b/src/components/pages/Error404/style.module.css
@@ -21,3 +21,25 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 100px;
+        margin-top: 70px;
+    }
+    .text {
+        width: 70%;
+        margin: auto;
+        font-size: 18px;
+        margin-top: 0;
+    }
+    .line {
+        display: block;
+    }
+    .link {
+        font-size: 14px;
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+    
+}
