--- a/src/components/pages/Home/Header/style.module.css
+++ b/src/components/pages/Home/Header/style.module.css
@@ -28,3 +28,20 @@
     text-decoration: underline;
 }
 
+@media screen and (max-width: 768px) {
+    .container {
+        margin: 20px;
+    }
+    .logo {
+        width: 150px;
+    }
+    .menu {
+        gap: 20px;
+        align-items: center;
+    }
+    .link {
+        font-size: 0.6em;
+        text-transform: uppercase;
+    }
+}
+
