--- a/src/components/pages/Home/Main/Location/style.module.css
+++ b/src/components/pages/Home/Main/Location/style.module.css
@@ -12,7 +12,7 @@
 }
 
 .title {
-    width: 300px;
+    width: 250px;
     position: absolute;
     bottom: 0;
     left: 10px;
@@ -30,4 +30,10 @@
     width: 100%;
     height: 90px;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  }
+
+  @media screen and (max-width: 768px) {
+    .img {
+        height: 255px;
+    }
   }
