--- a/src/components/pages/PageLocation/style.module.css
+++ b/src/components/pages/PageLocation/style.module.css
@@ -1,22 +1,30 @@
+.blocContainers {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
 .containerHost {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    margin-top: 10px;
 }
 
 .title {
-    width: 60%;
+    width: 100%;
     font-size: 36px;
     font-weight: 500;
     margin-bottom: 0;
+    margin-top: 20px;
     margin-left: 50px;
     color: #FF6060;
 }
 .host {
     display: flex;
     align-items: center;
-    margin-right: 50px;
-    
+    margin-right: 30px;
 }
 .hostName {
     width: 93px;
@@ -36,7 +44,8 @@
     font-size: 18px;
     font-weight: 500;
     color: #FF6060;
-    margin-top: 5px;
+    margin-top: 0;
+    margin-bottom: 40px;
     margin-left: 50px;    
 }
 
@@ -57,12 +66,9 @@
 
 }
 
-.rating {
-    display: flex;
-    justify-content: space-between;
-}
 .placeRating {
-    margin-right: 50px;
+    margin-bottom: 10px;
+    margin-right: 30px;
 }
 .containerCollapse {
     display: flex;
@@ -82,4 +88,61 @@
 .equipment {
     list-style-type: none;
     line-height: 2;
+}
+
+@media screen and (max-width: 768px) {
+    .blocContainers {
+        display: flex;
+        flex-direction: column;
+    }
+    .containerHost {
+        flex-direction: row-reverse;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 10px;
+        margin-bottom: 0;
+    }
+    
+    .title {
+        width: 80%;
+        font-size: 18px;
+        margin-left: 20px;
+        margin-top: 5px;
+    }
+    .location {
+        margin-left: 20px;
+        font-size: 12px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+    .tags {
+        margin-left: 20px;
+        margin-top: 0;
+        width: 100%;
+    }
+    .tag {
+        font-size: 10px;
+        padding: 5px 10px;
+        border-radius: 8px;
+    }
+    
+    .placeRating {
+        margin-left: 20px;
+    }
+    .host {
+        margin-right: 20px;
+    }
+    .hostName {
+        font-size: 14px;
+        margin-right: 5px;
+    }
+    .imgHost {
+        width: 40px;
+        height: 40px;
+    }
+    .containerCollapse {
+        margin-top: 0;
+        flex-direction: column;
+        margin-bottom: 0;
+    }
 }
