fix structure, display chevron slide and remove max-width

--- a/src/global.css
+++ b/src/global.css
@@ -3,8 +3,8 @@
     src: url('./assets/font/Montserrat-VariableFont_wght.ttf');
 }
 body {
-    max-width: 1400px; 
-    margin: auto;
+    box-sizing: border-box;
+    padding: 0;
 }
 
 * {
