--- a/src/pages/Home/Header/style.module.css
+++ b/src/pages/Home/Header/style.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 50px;
+    margin: 50px 70px;
 }
 
 .menu {
