--- a/src/pages/PageLocation/style.module.css
+++ b/src/pages/PageLocation/style.module.css
@@ -1,7 +1,8 @@
 .blocContainers {
     display: flex;
     justify-content: space-between;
-    width: 100%;
+    padding-left: 15px;
+    padding-right: 25px;
 }
 
 .containerHost {
@@ -95,6 +96,7 @@
     .blocContainers {
         display: flex;
         flex-direction: column;
+        padding: 0;
     }
     .containerHost {
         flex-direction: row-reverse;
